--- a/page2.html
+++ b/page2.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cookie Clicker Game</title>
   <style>
-    /* Styling remains unchanged */
     body {
       background-image: linear-gradient(to bottom, #00509E, #001F54);
       background-size: cover;
@@ -51,6 +50,7 @@
       transition: transform 0.1s ease-in-out;
     }
 
+    /* Chocolate chip styles */
     .chocolate-chip {
       position: absolute;
       background-color: #3E2723; /* Dark chocolate color */
@@ -69,13 +69,14 @@
     .chocolate-chip:nth-child(9) { width: 20px; height: 20px; top: 85%; left: 25%; }
     .chocolate-chip:nth-child(10) { width: 15px; height: 15px; top: 25%; left: 50%; }
 
+    /* Dim background */
     .dim-background {
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+      background: rgba(0, 0, 0, 0); /* Fully transparent background */
       display: none;
       z-index: 9;
     }
@@ -105,6 +106,8 @@
       align-items: center;
       padding: 10px 0;
       box-shadow: 0px -2px 4px rgba(0, 0, 0, 0.5);
+      position: absolute;
+      bottom: 0;
     }
 
     .footer-button {
@@ -114,7 +117,46 @@
       font-size: 1em;
       font-weight: bold;
       cursor: pointer;
+      padding: 5px 15px;
     }
+
+    .footer-button:hover {
+      text-decoration: underline;
+    }
+
+    /* Restored design for "10 🍪" button in the shop */
+    .upgrade-line {
+      border-top: 1px solid black;
+      margin-top: 20px;
+      padding-top: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    .upgrade-line p {
+      margin: 0;
+    }
+
+    .upgrade-line p:first-child {
+      font-weight: bold;
+      text-transform: uppercase;
+    }
+
+    .upgrade-button {
+      padding: 10px 20px; /* Restored button size and design */
+      background-color: #00509E;
+      color: white;
+      border: none;
+      cursor: pointer;
+      font-size: 1em;
+      border-radius: 5px;
+    }
+
+    .upgrade-button:hover {
+      background-color: #003f7a;
+    }
+
   </style>
 </head>
 <body>
@@ -204,5 +246,6 @@
       }
     }
   </script>
+
 </body>
 </html>
