--- a/page2.html
+++ b/page2.html
@@ -55,7 +55,7 @@
       position: absolute;
       background-color: #3E2723; /* Dark chocolate color */
       border-radius: 50%;
-      pointer-events: none; /* Prevent chips from triggering events */
+      pointer-events: auto; /* Allow interaction with chips */
     }
 
     .chocolate-chip:nth-child(1) { width: 30px; height: 30px; top: 10%; left: 25%; }
@@ -76,9 +76,10 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0); /* Fully transparent background */
+      background: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
       display: none;
       z-index: 9;
+      backdrop-filter: blur(5px); /* Adding blur effect */
     }
 
     .gui {
@@ -247,59 +248,62 @@
       if (!isVisible) {
         gui.style.display = 'block';
         dimBackground.style.display = 'block';
+      } else {
+        dimBackground.style.display = 'none';
       }
     }
 
-    // IndexedDB Functions
-    function initIndexedDB() {
+    function saveToIndexedDB(value) {
       const request = indexedDB.open(dbName, dbVersion);
-      
-      request.onerror = function (event) {
-        console.error('Database error: ' + event.target.errorCode);
-      };
 
-      request.onsuccess = function (event) {
-        const db = event.target.result;
-        loadFromIndexedDB();
-      };
-
-      request.onupgradeneeded = function (event) {
-        const db = event.target.result;
-        if (!db.objectStoreNames.contains(dbStoreName)) {
-          db.createObjectStore(dbStoreName, { keyPath: 'id' });
-        }
-      };
-    }
-
-    function saveToIndexedDB(score) {
-      const request = indexedDB.open(dbName, dbVersion);
-      request.onsuccess = function (event) {
-        const db = event.target.result;
+      request.onsuccess = function () {
+        const db = request.result;
         const transaction = db.transaction([dbStoreName], 'readwrite');
         const store = transaction.objectStore(dbStoreName);
-        
-        store.put({ id: 1, score: score });
+
+        const saveRequest = store.put({ score: value });
+
+        saveRequest.onsuccess = function () {
+          console.log('Score saved successfully.');
+        };
+
+        saveRequest.onerror = function () {
+          console.error('Failed to save score.');
+        };
+      };
+
+      request.onerror = function () {
+        console.error('Failed to open IndexedDB.');
       };
     }
 
     function loadFromIndexedDB() {
       const request = indexedDB.open(dbName, dbVersion);
-      request.onsuccess = function (event) {
-        const db = event.target.result;
+
+      request.onsuccess = function () {
+        const db = request.result;
         const transaction = db.transaction([dbStoreName], 'readonly');
         const store = transaction.objectStore(dbStoreName);
+        const getRequest = store.get('score');
 
-        store.get(1).onsuccess = function (event) {
-          const data = event.target.result;
-          if (data) {
-            score = data.score;
+        getRequest.onsuccess = function () {
+          if (getRequest.result) {
+            score = getRequest.result.score;
             document.getElementById('score').textContent = score;
           }
         };
+
+        getRequest.onerror = function () {
+          console.error('Failed to load score.');
+        };
+      };
+
+      request.onerror = function () {
+        console.error('Failed to open IndexedDB.');
       };
     }
 
-    initIndexedDB(); // Initialize IndexedDB on page load
+    loadFromIndexedDB();
   </script>
 
 </body>
