--- a/page2.html
+++ b/page2.html
@@ -70,20 +70,7 @@
     .chocolate-chip:nth-child(9) { width: 20px; height: 20px; top: 85%; left: 25%; }
     .chocolate-chip:nth-child(10) { width: 15px; height: 15px; top: 25%; left: 50%; }
 
-    /* Dim background fully interactable */
-    .dim-background {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0); /* Fully transparent */
-      display: none;
-      z-index: 9;
-      pointer-events: none; /* Remove pointer events to make it interactable */
-      backdrop-filter: blur(0); /* Disable blur effect */
-    }
-
+    /* Dim background removed */
     .gui {
       position: absolute;
       top: 50%;
@@ -164,8 +151,6 @@
 </head>
 <body>
 
-  <div class="dim-background" id="dimBackground"></div>
-
   <div class="counter-box">
     <span id="score">0</span> cookies
   </div>
@@ -244,13 +229,8 @@
       const guis = document.querySelectorAll('.gui');
       guis.forEach(gui => gui.style.display = 'none');
       document.getElementById(guiId).style.display = 'block';
-      document.getElementById('dimBackground').style.display = guiId === 'storeGUI' ? 'block' : 'none';
       // Allow interaction with background and all elements beneath.
-      if (document.getElementById('dimBackground').style.display === 'block') {
-        document.getElementById('dimBackground').style.pointerEvents = 'auto'; 
-      } else {
-        document.getElementById('dimBackground').style.pointerEvents = 'none'; 
-      }
+      document.querySelector('.game-container').style.pointerEvents = guiId === 'storeGUI' ? 'none' : 'auto';
     }
 
     function saveToIndexedDB(score) {
