--- a/page2.html
+++ b/page2.html
@@ -177,7 +177,7 @@
     <p>Buy upgrades and items here!</p>
     <div class="upgrade-line">
       <div>
-        <p>Clicks <span id="level">count 1</span></p>
+        <p>Clicks <span id="level">LVL 1</span></p>
         <p id="clicksPerClick">+1 cookie per click</p>
       </div>
       <button class="upgrade-button" onclick="add10Cookies()">10 🍪</button>
