--- a/page2.html
+++ b/page2.html
@@ -46,9 +46,8 @@
       border-radius: 50%;
       position: relative;
       cursor: pointer;
-      transition: transform 0.1s ease-in-out;
+      transition: transform 0.1s ease-in-out, width 0.1s ease-in-out, height 0.1s ease-in-out;
       z-index: 10; /* Ensures cookie click area is above other elements */
-      border: none; /* Remove the border around the circle */
     }
 
     /* Chocolate chip styles */
@@ -56,7 +55,7 @@
       position: absolute;
       background-color: #3E2723; /* Dark chocolate color */
       border-radius: 50%;
-      pointer-events: auto; /* Allow interaction with chips */
+      pointer-events: none;
     }
 
     .chocolate-chip:nth-child(1) { width: 30px; height: 30px; top: 10%; left: 25%; }
@@ -70,7 +69,6 @@
     .chocolate-chip:nth-child(9) { width: 20px; height: 20px; top: 85%; left: 25%; }
     .chocolate-chip:nth-child(10) { width: 15px; height: 15px; top: 25%; left: 50%; }
 
-    /* Dim background removed */
     .gui {
       position: absolute;
       top: 50%;
@@ -86,7 +84,6 @@
       padding: 20px;
       text-align: center;
       color: black;
-      pointer-events: auto; /* Allow interaction */
     }
 
     footer {
@@ -115,7 +112,6 @@
       text-decoration: underline;
     }
 
-    /* Restored design for "10 🍪" button in the shop */
     .upgrade-line {
       border-top: 1px solid black;
       margin-top: 20px;
@@ -135,7 +131,7 @@
     }
 
     .upgrade-button {
-      padding: 10px 20px; /* Restored button size and design */
+      padding: 10px 20px;
       background-color: #00509E;
       color: white;
       border: none;
@@ -171,96 +167,53 @@
     </div>
   </div>
 
-  <!-- Shop GUI -->
   <div class="gui" id="storeGUI">
     <h2>Store</h2>
     <p>Buy upgrades and items here!</p>
     <div class="upgrade-line">
       <div>
-        <p>Clicks <span id="level">LVL 1</span></p>
+        <p>Clicks <span id="level">lvl 1</span></p>
         <p id="clicksPerClick">+1 cookie per click</p>
       </div>
       <button class="upgrade-button" onclick="add10Cookies()">10 🍪</button>
     </div>
   </div>
 
-  <!-- Other GUIs -->
-  <div class="gui" id="specialGUI">
-    <h2>Special</h2>
-    <p>Special events and items.</p>
-  </div>
-  <div class="gui" id="statsGUI">
-    <h2>Stats</h2>
-    <p>Check your progress here.</p>
-  </div>
-  <div class="gui" id="miscGUI">
-    <h2>Misc</h2>
-    <p>Extra settings and options.</p>
-  </div>
-
   <footer>
     <button class="footer-button" onclick="toggleGUI('storeGUI')">Store</button>
-    <button class="footer-button" onclick="toggleGUI('specialGUI')">Special</button>
-    <button class="footer-button" onclick="toggleGUI('statsGUI')">Stats</button>
-    <button class="footer-button" onclick="toggleGUI('miscGUI')">Misc</button>
   </footer>
 
   <script>
     let score = 0;
-    let cookiesPerClick = 1; // Base value of cookies per click
-    let level = 1; // Initialize level
-    const dbName = 'cookieClickerDB';
-    const dbVersion = 1;
-    const dbStoreName = 'clicks';
+    let cookiesPerClick = 1; 
+    let level = 1; 
 
     function incrementScore() {
       score += cookiesPerClick;
       document.getElementById('score').textContent = score;
-      saveToIndexedDB(score);
+      const cookie = document.querySelector('.click-circle');
+      cookie.style.transform = 'scale(1.1)';
+      setTimeout(() => cookie.style.transform = 'scale(1)', 100);
     }
 
     function add10Cookies() {
       if (score >= 10) {
         score -= 10;
-        cookiesPerClick++; // Increase cookies per click
-        level++; // Increment level
+        cookiesPerClick++;
+        level++;
         document.getElementById('score').textContent = score;
-        document.getElementById('clicksPerClick').textContent = `+1 cookie per click`; // Update display to keep +1 fixed
-        document.getElementById('level').textContent = `lvl ${level}`; // Update level display
-        saveToIndexedDB(score);
+        document.getElementById('clicksPerClick').textContent = `+${cookiesPerClick} cookies per click`;
+        document.getElementById('level').textContent = `lvl ${level}`;
+      } else {
+        alert("Not enough cookies!");
       }
     }
 
     function toggleGUI(guiId) {
       const guis = document.querySelectorAll('.gui');
       guis.forEach(gui => {
-        if (gui.id === guiId) {
-          gui.style.display = (gui.style.display === 'block' ? 'none' : 'block');
-        } else {
-          gui.style.display = 'none';
-        }
+        gui.style.display = gui.id === guiId && gui.style.display !== 'block' ? 'block' : 'none';
       });
-    }
-
-    function saveToIndexedDB(data) {
-      if (!window.indexedDB) {
-        console.log('Your browser does not support IndexedDB.');
-        return;
-      }
-
-      const request = indexedDB.open(dbName, dbVersion);
-
-      request.onsuccess = function(event) {
-        const db = event.target.result;
-        const transaction = db.transaction([dbStoreName], 'readwrite');
-        const store = transaction.objectStore(dbStoreName);
-        store.put(data, dbStoreName);
-        console.log('Data saved to IndexedDB.');
-      };
-
-      request.onerror = function(event) {
-        console.log('Database error:', event.target.errorCode);
-      };
     }
   </script>
 
